небольшая поправка в переводах и небольшой баго фикс